# Maat-Editor3D

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  test.lua  test.rhai  test.wren
Models/: Axis.glb
resources/Fonts/: Purisa.fnt  SansSerif.fnt  TestFont.fnt  TimesNewRoman.fnt  karumbi.fnt
src/: main.rs
src/modules/: import_export.rs  light_object.rs  logs.rs  mod.rs  world_object.rs
src/modules/scenes/: editor_screen.rs  load_screen.rs  mod.rs
