[package]
name = "maat_editor_3d"
version = "0.1.0"
authors = ["Lilith <lilith@inet-sys.com>"]
edition = "2018"

[dependencies]
maat_graphics = { path = "./Maat-Graphics/" }
maat_input_handler = { path = "./Maat-InputHandler/" }
#maat_sound = { path = "./Maat-Sound/" }
winit = "0.19.1"
rand = "0.6"
csv = "1"
hlua = "0.3"
wren = "0.1.12"

[dependencies.cgmath]
version = "0.17.0"
features = ["swizzle"]
